// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chrome theme generator should provide installation instructions 1`] = `
"
1. Launch Chrome and go to \`chrome://extensions\`.
2. Check the \\"Developer mode\\" checkbox at the top.
3. Click the \\"Load unpacked extension...\\" button and choose the desired theme directory (\`Themer Dark\` or \`Themer Light\`).

(To reset or remove the theme, visit \`chrome://settings\` and click \\"Reset to Default\\" in the \\"Appearance\\" section.)
  "
`;

exports[`Chrome theme generator should render properly formatted manifest files 1`] = `
Object {
  "manifest_version": 2,
  "name": "Themer Dark",
  "theme": Object {
    "colors": Object {
      "bookmark_text": Array [
        255,
        252,
        255,
      ],
      "frame": Array [
        40,
        38,
        41,
      ],
      "ntp_background": Array [
        71,
        66,
        71,
      ],
      "ntp_text": Array [
        255,
        252,
        255,
      ],
      "tab_background_text": Array [
        255,
        252,
        255,
      ],
      "tab_background_text_inactive": Array [
        255,
        252,
        255,
      ],
      "tab_background_text_incognito": Array [
        255,
        252,
        255,
      ],
      "tab_background_text_incognito_inactive": Array [
        255,
        252,
        255,
      ],
      "tab_text": Array [
        255,
        252,
        255,
      ],
      "toolbar": Array [
        71,
        66,
        71,
      ],
    },
    "tints": Object {
      "buttons": Array [
        0.5697167755991286,
        0.5,
        0.5,
      ],
      "frame_inactive": Array [
        -1,
        -1,
        -1,
      ],
      "frame_incognito": Array [
        0.7743589743589742,
        1,
        0.55,
      ],
      "frame_incognito_inactive": Array [
        0.7743589743589742,
        1,
        0.55,
      ],
    },
  },
}
`;

exports[`Chrome theme generator should render properly formatted manifest files 2`] = `
Object {
  "manifest_version": 2,
  "name": "Themer Light",
  "theme": Object {
    "colors": Object {
      "bookmark_text": Array [
        40,
        38,
        41,
      ],
      "frame": Array [
        224,
        220,
        224,
      ],
      "ntp_background": Array [
        255,
        252,
        255,
      ],
      "ntp_text": Array [
        40,
        38,
        41,
      ],
      "tab_background_text": Array [
        40,
        38,
        41,
      ],
      "tab_background_text_inactive": Array [
        40,
        38,
        41,
      ],
      "tab_background_text_incognito": Array [
        40,
        38,
        41,
      ],
      "tab_background_text_incognito_inactive": Array [
        40,
        38,
        41,
      ],
      "tab_text": Array [
        40,
        38,
        41,
      ],
      "toolbar": Array [
        255,
        252,
        255,
      ],
    },
    "tints": Object {
      "buttons": Array [
        0.5692488262910799,
        0.5,
        0.5,
      ],
      "frame_inactive": Array [
        -1,
        -1,
        -1,
      ],
      "frame_incognito": Array [
        0.7745803357314148,
        1,
        0.45,
      ],
      "frame_incognito_inactive": Array [
        0.7745803357314148,
        1,
        0.45,
      ],
    },
  },
}
`;
